Fix flicker

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,3 +5,7 @@
 body {
   @apply dark:bg-surface-950 dark:text-surface-0;
 }
+
+[v-cloak] {
+  display: none;
+}
